<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    app:layoutDescription="@xml/dialog_scene">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchNoticeVote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/notice_votes" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchNoticeKissparada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/switchNoticeVote"
        android:minHeight="48dp"
        android:text="@string/notice_kissparada" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchNoticeRepriza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/switchNoticeKissparada"
        android:minHeight="48dp"
        android:text="@string/notice_repriza" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/switchNoticeRepriza"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@android:string/cancel"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/save"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</RelativeLayout>